--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,5 +5,9 @@ DB_NAME=shopc_db
 
 IPAYMU_API_KEY=your_ipaymu_api_key
 IPAYMU_VA=your_ipaymu_va
+IPAYMU_API_URL=https://sandbox.ipaymu.com/api/v2/payment
 
 JWT_SECRET=your_jwt_secret_key
+
+FRONTEND_URL=http://localhost:8080
+BACKEND_URL=http://localhost:8000
