--- a/backend/deno.json
+++ b/backend/deno.json
@@ -4,6 +4,7 @@
     "start": "deno run --config ./deno.json --allow-net --allow-read --allow-env main.ts"
   },
   "imports": {
+    "gusmang-ipaymu-node": "npm:gusmang-ipaymu-node@^1.0.7",
     "oak": "https://deno.land/x/oak@v12.6.1/mod.ts",
     "dotenv": "https://deno.land/x/dotenv@v3.2.2/mod.ts",
     "scrypt": "https://deno.land/x/scrypt@v4.2.1/mod.ts",
